infrastructure/configs/solar-pi/istioingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway-https
  namespace: istio-ingress
  annotations:
    metallb.universe.tf/address-pool: main-pool
    cert-manager.io/clusterissuer: selfsigned-cluster-issuer
spec:
  gatewayClassName: istio
  listeners:
    - name: default-https
      hostname: "*.${DOMAIN_FORWARD_HAWK}"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: k8s-lfp-rocks-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway-http
  namespace: istio-ingress
  annotations:
    metallb.universe.tf/address-pool: main-pool
spec:
  gatewayClassName: istio
  listeners:
    - name: default-http
      hostname: "*.${DOMAIN_FORWARD_HAWK}"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
